<resources>
    <string name="app_name">Game</string>
    <string name="gameBaslik">EA SPORTS FC™ 25</string>
    <string name="tur1Yazi">Sports</string>
    <string name="tur3Yazi">Multi-Player</string>
    <string name="tur2Yazi">Single-Player</string>
    <string name="gameAciklama">EA SPORTS FC™ 25 gives you more ways to win for the club. Team up with friends in your favourite modes with the new 5v5 Rush, and manage your club to victory as FC IQ delivers more tactical control than ever before.</string>
    <string name="gameFiyat">$69,99</string>
    <string name="buttonYazi">ADD TO CART</string>
</resources>